gtk/gtkfilechooserwidget.c
@@ -3212,24 +3212,6 @@ recent_files_setting_is_enabled (GtkFileChooserWidget *impl)
   return enabled;
 }
 
-static gboolean
-recent_scheme_is_supported (void)
-{
-  const gchar * const *supported;
-
-  supported = g_vfs_get_supported_uri_schemes (g_vfs_get_default ());
-  if (supported != NULL)
-    return g_strv_contains (supported, "recent");
-
-  return FALSE;
-}
-
-static gboolean
-can_show_recent (GtkFileChooserWidget *impl)
-{
-  return recent_files_setting_is_enabled (impl) && recent_scheme_is_supported ();
-}
-
 /* Sets the file chooser to showing Recent Files or $CWD, depending on the
  * user’s settings.
  */
@@ -3241,7 +3223,7 @@ set_startup_mode (GtkFileChooserWidget *impl)
   switch (priv->startup_mode)
     {
     case STARTUP_MODE_RECENT:
-      if (can_show_recent (impl))
+      if (recent_files_setting_is_enabled (impl))
         {
           operation_mode_set (impl, OPERATION_MODE_RECENT);
           break;
